<?xml version="1.0"?>
<package format="3">
  <name>ros2_custom_messages</name>
  <version>0.0.0</version>
  <description>ROS2 Custom Messages Assignment</description>

  <maintainer email="student@university.edu">Student Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rclcpp</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
